# syntag

./: .env  .gitignore  .npmrc  README.md  README.python.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
apps/api/: .pre-commit-config.yaml  Dockerfile  alembic.ini  aws-push-and-deploy.sh  azure-env.sh  azure-push-and-deploy.sh  azure-push.sh  docker-run-local.sh  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2024_03_23_1152-c00e3d88ee44_.py  2024_03_23_1210-520f0c826994_.py  2024_03_24_1056-c5706d3e52d3_.py  2024_03_24_1751-461d37c1c431_.py  2024_04_13_1835-76c7bdcc5ce5_.py  2024_04_17_1322-3ef6bc504b7c_.py  2024_05_01_1336-89e06527c9a0_.py  2024_05_04_2329-dff7721fb3ed_.py  2024_05_06_0629-b253eddecc10_.py  2024_05_06_2223-fb8d96c56dd2_.py  2024_06_13_2158-c21b55e18a91_.py  2024_06_14_0011-0dab22c99b3e_.py  2024_06_29_0139-a7799e94e128_add_index_column_to_messages.py  2024_06_29_1212-fedde0103976_vapicallid.py  2024_06_29_2323-a2ca55d5b896_server_url_changes.py  2024_06_29_2352-508ecf79a5fc_change_enums.py  2024_07_03_0104-689a9496d67c_store_user_s_personal_phone_number.py  2024_07_04_1834-928d7b063a15_.py  2024_07_11_0204-9f622551b874_change_to_cascading_on_delete_for_convo_.py  2024_07_16_0103-93e32438b721_.py  2024_07_16_1237-9ca6b8aa7c0e_.py  2024_07_16_1254-82afa1ddea66_.py  2024_07_19_1628-08d5e3eeacd2_store_vapi_config.py  2024_07_19_2241-04b703919b8d_.py  2024_07_19_2321-70325965b6f2_.py  2024_07_23_1331-bc7aae4ac834_summary_field_in_convo.py  2024_07_23_1503-f9ef642c9f6c_caller_and_assistant_pn_starred_viewed.py  2024_07_25_2257-5415cbfe3696_add_files_assistants_table.py  2024_07_25_2317-11e94c76742e_add_gpt_4o_mini_to_llm_enum_db.py  2024_07_25_2347-87e8db634345_use_files_assistants_as_junction_table.py  2024_07_26_0105-3e019be303a1_properly_generate_assistants_to_files.py  2024_07_28_1405-7500c8efaae6_remove_llm_enum.py  2024_07_28_1438-2604b490f7a7_remove_db_llm_enum.py  2024_08_04_1128-871c7c34bbb5_.py  2024_08_04_1156-95a48e90c108_.py  2024_08_05_0225-7ee6a4867c4c_.py  2024_08_07_2012-eb408aa3b018_knowledge_table.py  2024_08_10_2300-bb94ee7a1983_add_cluster_name.py  2024_08_11_1146-1b6cc0eb3848_assistants_to_knowledge.py  2024_08_11_1536-af4d1169ab04_zilliz_doc_name.py  (+37 more)
apps/api/app/: instrumentation.py  main.py  utils.py
apps/api/app/core/: config.py
apps/api/app/database/: session.py
apps/api/app/database/tables/: assistants_to_knowledge.py  chunks.py  conversation.py  knowledge.py  manual_call_transcription.py  message.py  phone_number.py  user.py  user_journal_entry.py  voice_assistant.py
apps/api/app/models/: enums.py  schemas.py  utils.py  vapi_schemas.py
apps/api/app/routes/: embeddings.py  test.py  whoami.py
apps/api/app/routes/billing/: route.py  utils.py
apps/api/app/routes/custom_llm/: custom_llm.py  fast_stream.py  utils.py
apps/api/app/routes/record_call/: route.py  service-account-file.json
apps/api/app/routes/sapi/: route.py
apps/api/app/routes/squire/: barberBookingClient.py  defaultPrompt.py  route.py
apps/api/app/routes/vapi/: route.py  tools.py  utils.py
apps/api/app/routes/vapi/handlers/: assistant_request.py  eoc_report.py  (+1 more)
apps/api/app/service_account_files/: storage-service-account-file.json
apps/api/app/services/: cache.py  conversation_queue.py  llm.py  openai_client.py
apps/api/app/services/analytics/: review.py  summary.py
apps/api/app/services/clerk/: utils.py
apps/api/app/services/openai/: utils.py
apps/api/app/services/pinecone/: utils.py
apps/api/app/services/stripe/: types.py  utils.py
apps/api/app/services/vapi/: generate_pydantic.sh  generated_models.py  utils.py  vapi_models.py
apps/api/notebooks/: agents.ipynb  azure.ipynb  clerk.ipynb  database.ipynb  embeddings.ipynb  gcloud.ipynb  stripe.ipynb  vapi.ipynb
apps/api/test/: auth_fixtures.py  conftest.py  openai_fixtures.py  qstash_fixtures.py  stripe_fixtures.py
apps/api/test/db/: test_conversations.py
apps/api/test/routes/: test_billing.py  test_vapi_server_url.py  test_whoami.py
apps/api/test/services/: test_openai_client.py
misc/agents/umd-call-center/: .gitignore  Service Center Student Employee Handbook.docx  content.txt  main copy.ipynb  main.ipynb  pyproject.toml  splits.pkl  testset100-o1.xlsx  testset25.jsonl  testset250.jsonl  testset250.xlsx  testset45-o1preview.xlsx  testset55-o1mini.xlsx
misc/agents/umd-call-center/reports/gpt_4o_mini-splits_character-top3-pypdf/: knowledge_base.jsonl  knowledge_base_meta.json  metrics_results.json
misc/agents/umd-call-center/reports/gpt_4o_mini-splits_character-top3-zerox/: report.html
misc/agents/umd-call-center/reports/gpt_4o_mini-splits_character-top5-zerox/: agent_answer.json
misc/agents/umd-call-center/reports_testset100-o1/p1-gpt_4o_mini-splits_character-max_marginal_relevance-top5-zerox-tester_gpt-4o-mini/: agent_answer.json  knowledge_base_meta.json  metrics_results.json  report.html  report_details.json  testset.json
misc/agents/umd-call-center/reports_testset100-o1/p2-gpt_4o_mini-splits_character_800_0-similarity_search-top5-zerox-tester_gpt-4o-mini/: agent_answer.json  metrics_results.json  report.html  report_details.json  testset.json
misc/agents/umd-call-center/reports_testset100-o1/p2-gpt_4o_mini-splits_character_800_0-similarity_search-top5-zerox-tester_o1-mini/: agent_answer.json  metrics_results.json  report.html  report_details.json  testset.json
misc/agents/umd-call-center/reports_testset25/gpt_4o_mini-splits_character-top10-zerox/: agent_answer.json  metrics_results.json  report.html  report_details.json  testset.json
misc/agents/umd-call-center/reports_testset25/gpt_4o_mini-splits_character-top3-pypdf/: agent_answer.json  report.html  report_details.json  testset.json
misc/agents/umd-call-center/reports_testset25/gpt_4o_mini-splits_character-top3-zerox/: agent_answer.json  knowledge_base.jsonl  metrics_results.json  report_details.json  testset.json
misc/agents/umd-call-center/zerox/: main.ipynb  output.md  pyproject.toml
(+409 files in other folders)
