[tool.poetry]
name = "umd-call-center"
version = "0.1.0"
description = "demo for UMD's call center"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
langchain-community = "^0.3.3"
langchain-core = "^0.3.13"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
azure-ai-documentintelligence = "^1.0.0b4"
langchain-openai = "^0.2.3"
nltk = "^3.9.1"
pinecone-client = {extras = ["grpc"], version = "^5.0.1"}
langchain-experimental = "^0.3.2"
giskard = {extras = ["llm"], version = "^2.15.2"}
openai = "^1.52.2"
pypdf = "^5.1.0"
rapidocr-onnxruntime = "^1.3.25"
ragas = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
