[tool.poetry]
name = "zerox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
py-zerox = "^0.0.7"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
poppler-utils = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
